--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0"
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.0"
